# mcp-agent

./: .gitignore  Dockerfile  client.py  pyproject.toml  requirements.txt  run.sh
